--- a/src/app/product/new_ar_product_detail.html
+++ b/src/app/product/new_ar_product_detail.html
@@ -36,7 +36,7 @@
                                 <div class="form-group">
                                     <label>产品介质形式：</label>
                                     <div class="checkbox">
-                                        <label><input type="checkbox" value="">电子书</label>
+                                        <label><input type="checkbox" checked="checked">电子书</label>
                                     </div>
                                     <div class="checkbox">
                                         <label><input type="checkbox" value="">书籍</label>
