--- a/src/app/product/primary_product.html
+++ b/src/app/product/primary_product.html
@@ -7,42 +7,67 @@
                     <div class="row">
                         <div class="col-lg-4" style="background-color: darkgray">
                             <form role="form">
-                                <h4>Content 1</h4>
-                                <h4>Content 2</h4>
-                                <h4>Content 3</h4>
-                                <h4>Content 4</h4>
-                                <h4>Content 5</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <h4>Content in main product 1</h4>
+                                <select class="form-control" id="mainProduct1">
+                                    <option>蛋生世界</option>
+                                </select>
                             </form>
                         </div>
                         <div class="col-lg-8" style="background-color: #dcdcdc">
                             <div class="row">
                                 <div class="col-lg-12">
                                     <form role="form">
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <h4>Content in main product 2</h4>
+                                        <select class="form-control" id="mainProduct2">
+                                            <option>蛋生世界</option>
+                                        </select>
                                     </form>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-6" style="background-color: #ddd4b0">
                                     <form role="form">
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
+                                        <h4>Content in main product 3</h4>
+                                        <h4>Content in main product 3</h4>
+                                        <h4>Content in main product 3</h4>
+                                        <h4>Content in main product 3</h4>
+                                        <h4>Content in main product 3</h4>
+                                        <h4>Content in main product 3</h4>
+                                        <select class="form-control" id="mainProduct3">
+                                            <option>蛋生世界</option>
+                                        </select>
                                     </form>
                                 </div>
                                 <div class="col-lg-6" style="background-color: aquamarine">
                                     <form role="form">
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
-                                        <h4>Content 1</h4>
+                                        <h4>Content in main product 4</h4>
+                                        <h4>Content in main product 4</h4>
+                                        <h4>Content in main product 4</h4>
+                                        <h4>Content in main product 4</h4>
+                                        <h4>Content in main product 4</h4>
+                                        <h4>Content in main product 4</h4>
+                                        <select class="form-control" id="mainProduct4">
+                                            <option>蛋生世界</option>
+                                        </select>
                                     </form>
                                 </div>
                             </div>
