--- a/src/app/product/product_list.html
+++ b/src/app/product/product_list.html
@@ -42,107 +42,103 @@
                             </form>
                         </div>
                         <div class="col-lg-4">
-                            <form role="form">
-                                <button type="button" class="btn btn-lg">&nbsp;&nbsp;搜&nbsp;&nbsp;索&nbsp;&nbsp;</button>
+                            <form role="form" style="text-align: right;margin-top: 20px">
+                                <div class="form-group">
+                                    <button type="button" class="btn btn-lg" ng-click="searchProductListByFilters()">&nbsp;&nbsp;搜&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;索&nbsp;&nbsp;</button>
+                                </div>
+                            </form>
+                            <form role="form" style="text-align: right;margin-top: 30px">
+                                <div class="form-group">
+                                    <button type="button" class="btn btn-lg" ng-click="resetSearch()">&nbsp;&nbsp;搜索重置&nbsp;&nbsp;</button>
+                                </div>
                             </form>
                         </div>
                     </div>
                     <div class="row" style="padding-top: 60px">
-                        <div class="col-lg-2">
+                        <div class="col-lg-1">
                             <form role="form">
                                 <a href="#new_ar_product_detail"><button type="button" class="btn btn-default">新增AR产品</button></a>
                             </form>
                         </div>
-                        <div class="col-lg-2">
+                        <div class="col-lg-1">
                             <form role="form">
                                 <a href="#new_video_product_detail"><button type="button" class="btn btn-default">新增视频产品</button></a>
                             </form>
                         </div>
-
-                        <div class="col-lg-1 col-md-offset-4">
-                            <form role="form">
-                                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recommentDiag">&nbsp;&nbsp;推&nbsp;&nbsp;&nbsp;&nbsp;荐&nbsp;&nbsp;</button>
-                                <div class="modal fade" id="recommentDiag" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
-                                            </div>
-                                            <div class="modal-body">
-                                                Hello world!!!
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Save changes</button>
+                        <div class="col-lg-4 col-md-offset-6">
+                            <div class="row">
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#recommentDiag">推&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;荐</button>
+                                        <div class="modal fade" id="recommentDiag" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                        <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                                    </div>
+                                                    <div class="modal-body">
+                                                        Hello world!!!
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                                                        <button type="button" class="btn btn-primary">Save changes</button>
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
-                                        <!-- /.modal-content -->
-                                    </div>
-                                    <!-- /.modal-dialog -->
+                                    </form>
                                 </div>
-                            </form>
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary">取消推荐</button>
+                                    </form>
+                                </div>
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary">上&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;架</button>
+                                    </form>
+                                </div>
+                                <div class="col-lg-3">
+                                    <form role="form" style="text-align: right">
+                                        <button type="button" class="btn btn-primary">下&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;架</button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-lg-1">
-                            <form role="form">
-                                <button type="button" class="btn btn-primary">&nbsp;&nbsp;取消推荐&nbsp;&nbsp;</button>
-                            </form>
-                        </div>
-                        <div class="col-lg-1">
-                            <form role="form">
-                                <button type="button" class="btn btn-primary">&nbsp;&nbsp;上&nbsp;&nbsp;&nbsp;&nbsp;架&nbsp;&nbsp;</button>
-                            </form>
-                        </div>
-                        <div class="col-lg-1">
-                            <form role="form">
-                                <button type="button" class="btn btn-primary">&nbsp;&nbsp;下&nbsp;&nbsp;&nbsp;&nbsp;架&nbsp;&nbsp;</button>
-                            </form>
-                        </div>
-
                     </div>
                     <div class="row" style="padding-top: 20px">
                         <div class="col-lg-12">
                             <div class="table-responsive">
                                 <table class="table table-striped table-bordered table-hover">
                                     <thead>
-                                    <tr>
-                                        <th>#</th>
-                                        <th>产品封面图</th>
-                                        <th>产品名</th>
-                                        <th>产品发布状态</th>
-                                        <th>修改时间</th>
-                                        <th>是否推荐</th>
-                                        <th>产品类型</th>
-                                    </tr>
+                                        <tr>
+                                            <th><input type="checkbox" ng-model="checkAll" ng-click="checkALLYesNo()"></th>
+                                            <th>产品封面图</th>
+                                            <th>产品名</th>
+                                            <th>产品发布状态</th>
+                                            <th>修改时间</th>
+                                            <th>是否推荐</th>
+                                            <th>产品类型</th>
+                                        </tr>
                                     </thead>
                                     <tbody>
-                                    <tr>
-                                        <td><input type="checkbox" name=""></td>
-                                        <td><i class="fa fa-users fa-fw"></i></td>
-                                        <td><a href="#new_ar_product_detail/2222">2222 product</a></td>
-                                        <td>上架</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td>是</td>
-                                        <td>AR</td>
-                                    </tr>
-                                    <tr>
-                                        <td><input type="checkbox" name=""></td>
-                                        <td><i class="fa fa-users fa-fw"></i></td>
-                                        <td><a href="#new_ar_product_detail/2222">2222 product</a></td>
-                                        <td>下架</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td>是</td>
-                                        <td>视频</td>
-                                    </tr>
-                                    <tr>
-                                        <td><input type="checkbox" name=""></td>
-                                        <td><i class="fa fa-users fa-fw"></i></td>
-                                        <td><a href="#new_ar_product_detail/2222">3333 product</a></td>
-                                        <td>下架</td>
-                                        <td>2016-10-10 10:50:59</td>
-                                        <td>否</td>
-                                        <td>视频</td>
-                                    </tr>
+                                        <tr ng-show="productItems==null">
+                                            <td colspan="7" style="background-color: #ffffff">
+                                                <div id="loadingScreen">
+                                                    <img src="img/loading_icon.gif" style="position: relative; margin: auto;">
+                                                </div>
+                                            </td>
+                                        </tr>
+                                        <tr ng-repeat="item in productItems" multiple-select-item="productItems">
+                                            <td><input type="checkbox" ng-model="selectedCheck" name="mySelectedProduct" ng-click="checkItem(item.id)" checked="checked"></td>
+                                            <td ng-bind="item.cover"></td>
+                                            <td><a href="#new_ar_product_detail/{{item.id}}" ng-bind="item.productName"></a></td>
+                                            <td ng-bind="item.releaseState"></td>
+                                            <td ng-bind="item.modifyDate | date:'yyyy-MM-dd HH:mm:ss'"></td>
+                                            <td ng-bind="item.recommend"></td>
+                                            <td ng-bind="item.productType"></td>
+                                        </tr>
                                     </tbody>
                                 </table>
                             </div>
